7th event complete

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <![endif]-->
 </head>
 
-<body>
+<body class="bgFade">
 
   <header class="main-navigation">
     <div class="container nav-container">
